--- a/notes_app/pubspec.yaml
+++ b/notes_app/pubspec.yaml
@@ -30,6 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.17.7
+  cloud_firestore: ^4.14.0
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
